# wizctl

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  pyproject.toml  requirements.txt  setup.py
config/: lights.yaml.example
doc/: API.md
example/: wizctl_example.dart
lib/: wizctl.dart
lib/src/: bulb_type.dart  constants.dart  control_signal.dart  discovery.dart  exceptions.dart  group.dart  light.dart  logging.dart  pilot.dart  protocol.dart  retry_config.dart  scene.dart  state.dart
src/wizctl/: __init__.py  config.py
src/wizctl/api/: __init__.py  models.py  server.py
src/wizctl/api/routes/: groups.py  lights.py  scenes.py
src/wizctl/cli/: __init__.py  main.py
src/wizctl/core/: __init__.py  discovery.py  groups.py  light.py  scenes.py
test/: cli_args_test.dart  cli_config_test.dart  wizctl_test.dart
